<?xml version="1.0"?>
<package>
  <name>visp_robotis_tracker</name>
  <version>0.0.0</version>
  <description>The visp_robotis_tracker package</description>

  <maintainer email="sch@robotis.com">sch</maintainer>
  <license>GPLv2</license>
  <author email="sch@robotis.com">sch</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visp_ros</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>visp_bridge</run_depend>
  <run_depend>tf</run_depend>

  <export>
     <rosdoc config="${prefix}/rosdoc.yaml" />
  </export>
</package>